updated chats design

--- a/Views/Query/StaffQuery/QueryDetails.cshtml
+++ b/Views/Query/StaffQuery/QueryDetails.cshtml
@@ -33,7 +33,7 @@
                     <span>@Model.TicketNumber</span>
                 </div>
                 <div class="info-item">
-                    <label>Description</label>
+                    <label>Query</label>
                     <p class="description">@Model.Description</p>
                 </div>
                 <div class="info-item">
@@ -42,10 +42,6 @@
                 </div>
 
 
-                <div class="info-item">
-                    <label>assignment ID  </label>
-                    <span>@assignmentID</span>
-                </div>
 
             </div>
         </div>
