--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
     <link rel="icon" href="~/Images/favicon-32x32.png" sizes="32x32" type="image/png" />
     <link rel="icon" href="~/Images/favicon-16x16.png" sizes="16x16" type="image/png" />
     <link rel="apple-touch-icon" href="~/Images/apple-touch-icon.png" />
+    <link rel="stylesheet" href="~/css/toast.css" />
 
 </head>
 <body>
@@ -109,7 +110,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="DummyTables" asp-action="Index">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Reports" asp-action="Index">
                                 <img src="~/svgs/table-alt.svg" alt="Dummy Table Icon" class="icon" /><span>Dummy Table</span>
                             </a>
                         </li>
@@ -147,6 +148,7 @@
         </div>
     </div>
 
+   
 
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
